# wagtail-cjk404

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: config.yaml
cjk404/: .gitignore  __init__.py  apps.py  builtin_redirects.py  cache.py  middleware.py  models.py  signals.py  tests.py  views.py  wagtail_hooks.py
cjk404/hooks/: __init__.py  admin_urls.py  filters.py  tables.py  utils.py  views.py
cjk404/management/commands/: activate_builtin_redirects.py  clean_redirects.py  clear_redirect_cache.py  import_builtin_redirects.py
cjk404/migrations/: 0005_alter_pagenotfoundentry_options_and_more.py  0006_pagenotfoundentry_updated_and_more.py  0007_pagenotfoundentry_updated_nullable.py
cjk404/static/cjk404/css/: admin.css
cjk404/static/cjk404/js/: redirect_toggle.js
cjk404/tests/: base.py  test_admin_views.py  test_example_redirect_fixtures.py  test_filters.py  test_management_commands.py  test_redirects.py  test_uniqueness.py
docs/: Django Management Commands.md  Installation.md
testproject/: manage.py  requirements.txt
testproject/home/migrations/: 0002_create_homepage.py
testproject/home/templates/home/: home_page.html  welcome_page.html
testproject/search/: views.py
testproject/search/templates/search/: search.html
testproject/testproject/: wsgi.py
testproject/testproject/settings/: base.py  dev.py
testproject/testproject/templates/: 404.html  500.html  base.html
