[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "cjk404.__version__" }
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[tool.setuptools]
packages = ["cjk404"]

[tool.distutils.bdist_wheel]
universal = true

[tool.isort]
profile = "black"
force_single_line = true
line_length = 100

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
lint.ignore-init-module-imports = true
exclude = ["migrations/*"]
lint.select = ["E9","F63","F7","F82"]
target-version = "py311"

[project]
name = "wagtail-cjk404"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "A Wagtail package which will give you ability to automatically log and create of redirects from within Wagtail admin panel."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Grzegorz Krol", email = "gk@cjk.pl" }
]
keywords = ["wagtail", "django"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Wagtail :: 6",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
"Homepage" = "https://github.com/cjkpl/wagtail-cjk404"
"Repository" = "https://github.com/cjkpl/wagtail-cjk404"